# aura

./: .gitattributes  .gitignore  AuraL1Bridge.sol  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
api/: Cargo.toml  build.rs
api/proto/: aura_l2.proto
api/src/: app_state.rs  config.rs  error.rs  main.rs
api/src/grpc/: mod.rs  service.rs
api/src/rest/: handlers.rs  mod.rs
contracts/broadcast/Deploy.s.sol/1/: run-latest.json
contracts/broadcast/Deposit.s.sol/1/: run-1772550974329.json
contracts/script/: Deploy.s.sol  Deposit.s.sol  UpdateStateRoot.s.sol  Withdraw.s.sol
contracts/src/: AuraL1Bridge.sol
core/: Cargo.toml
core/src/: main.rs
docker/: Dockerfile.deployer  deploy.sh
executor/: Cargo.toml
executor/src/: lib.rs  main.rs
indexer/: Cargo.toml
indexer/src/: main.rs
ingestor/: Cargo.toml
ingestor/src/: lib.rs  main.rs
state/: Cargo.toml
state/src/: account.rs  engine.rs  error.rs  lib.rs  merkle.rs  store.rs
