[package]
name = "aura-l2-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
alloy = { workspace = true }
state = { package = "aura-l2-state", path = "../state" }
revm = { version = "36.0.0", default-features = false, features = ["std"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.10.1"
