[package]
name = "aura-l2-state"
version = "0.1.0"
edition = "2024"

[lib]
name = "state"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true }

# RocksDB embedded key-value storage
rocksdb = "0.22.0"

# Keccak256 (Ethereum-standard hash) — Rustcamp 3.7
sha3 = "0.10.8"

# Serialization for RocksDB values — Rustcamp 3.6
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# Error handling
thiserror = "2.0.18"

# Structured logging — Rustcamp 3.8
tracing = { version = "0.1.44", features = ["log"] }

[dev-dependencies]
# Temporary directories for RocksDB in tests
tempfile = "3.10.1"
