[package]
name = "aura-l2-state"
version = "0.1.0"
edition = "2024"

[lib]
name = "state"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true }
rocksdb = "0.22.0"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0.18"
tracing = { version = "0.1.44", features = ["log"] }

[dev-dependencies]
tempfile = "3.10.1"
